[gd_scene load_steps=29 format=2]

[ext_resource path="res://Resources/Characters/Lipe/lipe_standing-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Resources/Characters/Lipe/lipe_running-Sheet.png" type="Texture" id=3]
[ext_resource path="res://Resources/Characters/Lipe/lipe_stopping.png" type="Texture" id=4]
[ext_resource path="res://Resources/Characters/Lipe/lipe_jumping.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Menu.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 32, 48 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "jumping",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "running",
"speed": 7.0
}, {
"frames": [ SubResource( 23 ) ],
"loop": true,
"name": "stopping",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "standing",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=16]

[sub_resource type="RectangleShape2D" id=15]

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 4.5, 1.75 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 4, 4 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 13 )
animation = "jumping"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1, 2.252 )
shape = SubResource( 16 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.46, 0.46 )
smoothing_enabled = true

[node name="Menu" parent="Camera2D" instance=ExtResource( 6 )]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -186.0
margin_top = -77.0
margin_right = -41.0
margin_bottom = 77.0

[node name="GroundCheckArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundCheckArea2D"]
position = Vector2( 0, 20.21 )
scale = Vector2( 0.978, 0.302 )
shape = SubResource( 15 )

[node name="LegdeHelp" type="Node2D" parent="."]

[node name="TouchArea" type="Area2D" parent="LegdeHelp"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LegdeHelp/TouchArea"]
position = Vector2( 10, 18.25 )
shape = SubResource( 24 )

[node name="checkArea" type="Area2D" parent="LegdeHelp"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LegdeHelp/checkArea"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 10.503, 12.45 )
shape = SubResource( 25 )

[connection signal="body_entered" from="GroundCheckArea2D" to="." method="_on_GroundCheckArea2D_body_entered"]
[connection signal="body_exited" from="GroundCheckArea2D" to="." method="_on_GroundCheckArea2D_body_exited"]
[connection signal="body_entered" from="LegdeHelp/TouchArea" to="." method="_on_TouchArea_body_entered"]
[connection signal="body_entered" from="LegdeHelp/checkArea" to="." method="_on_checkArea_body_entered"]
[connection signal="body_exited" from="LegdeHelp/checkArea" to="." method="_on_checkArea_body_exited"]
